Improve ScenarioIT tests